syntax = "proto3";

option go_package = "github.com/mamachengcheng/12306/app/service";

package service;

service Ticket {
  rpc Query (QueryRequest) returns (QueryReply) {}
  rpc Pay (PayRequest) returns (PayReply) {}
  rpc Book (BookRequest) returns (BookReply) {}
  rpc Refund (RefundRequest) returns (RefundReply) {}
}

message QueryRequest {
  string ScheduleID = 1;
}

message QueryReply {
  uint32 Code = 1;
  string Result = 2;
}

message PayRequest {
  string OrderID = 1;
}

message PayReply {
  uint32 Code = 1;
}

message BookRequest {
  string ScheduleID = 1;
  uint64 UserID = 2;
  uint32 SeatType = 3;
}

message BookReply {
  uint32 code = 1;
}

message RefundRequest {
  string OrderID = 1;
}

message RefundReply {
  uint32 code = 1;
}

